Tue Nov 27 18:33:07 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* README: Copied changed from BRANCH_0_8.

	* ROADMAP: Added.

	* src/net.c (check_aliases): Added to be able to do nested
	aliases.
	(action_sent_to_connection): Now calls check_aliases instead
	of check_alias.

Fri Nov 23 15:23:17 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: PLUGIN.API should be distributed in "HEAD" CVS
	aswell as BRANCH_0_8.

	* ROADMAP: Added double entry for easier NEWS catchup :)

	* src/profiles.c (connections_button_press_cb): Added function
	to trap doubleclick events.
	(window_profiles): Added signal for "button_press_event"

Mon Nov 12 17:21:59 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* configure.in: Stepped version to 0.8.99.

	* ROADMAP: Done on save log.

	* src/init.c (save_log_cb): Added.
	(save_log_file_ok_cb): Added.
	Now able to save logfiles from mud.

Mon Nov 12 11:22:39 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Added GNOME 2.0 and some other.

Wed Nov  7 16:34:41 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* NEWS: Added relasedate to version 0.8.

Wed Nov  7 10:54:39 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Branched into GNOMEMUD_0_8_BRANCH

Wed Nov  7 09:42:31 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/init.c (window_menu_help_manual_activate_cb): Changed to
	just call "ghelp:gnome-mud", which seems to do the trick.

Tue Nov  6 18:30:01 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* po/{ca,es}.po: Updated.

Tue Nov  6 16:46:59 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* po/sv.po: Updated.

Tue Nov  6 16:42:17 CET 2001  Robin Ericsson  <lobbin@localhost.nu>

	* doc/C/Makefile.am: Removed a circular dependency.
	* src/init.c: (window_menu_help_manual_activate_cb): Added.
	Also added help entry to menu.

Mon Nov  5 16:49:34 CET 2001  Jordi Mallach <jordi@sindominio.net>

	* src/init.c: Robin's patch for the Manual link in the help
	menu.
