@@ -22,6 +22,7 @@ feel free to suggest features, contribute, or comment.
 * Right-click menu for connection-tabs
 * Make better use for gtk_object_(get|set)_data
 * Cleanup of .c-files, better names on functions, etc...
+* Fix error when closing wizardwindow after using profilewindow
 
 0.10.0
 
@@ -32,3 +33,15 @@ feel free to suggest features, contribute, or comment.
 * SOCKS support
 * IPv6 support
 * GNOME 2.0
+
+Unplanned
+
+* Fix MCCP (crashes on a few muds)
+* Green/Red marker, so that you can see if tab is connected or not
+* Other marker on tab to show if using MCCP or not
+* Fix Speedwalking in AutoMapper
+* User defineable buttonbar
+* Customizable statusline
+* Scriptingsupport (perl/python)
+* Tab completion
+
